--- a/index.htm
+++ b/index.htm
@@ -24,9 +24,7 @@
         <br /><br />
         vigenere Grid:
         <div style="width:100%; margin:0; padding:0; font-size:11px; font-family:'courier new';">
-            <pre>
-                <table id="vigeneregrid" style="width:100%; border-collapse:collapse; margin:0; padding:0;" border="1"></table>
-            </pre>
+            <table id="vigeneregrid" style="border-collapse:collapse; margin:0; padding:0;" border="1"></table>
         </div>
     </body>
 </html>
