--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
         <button data-action="encrypt">Encrypt</button>
         <button data-action="decrypt">Decrypt</button>
         <button data-action="showgrid">Show Grid</button>
+        <span id="messageArea" style="color:red; font-weight:bold;"></span>
         <br /><br />
         Encrypted Text:<br/>
         <textarea id="encryptedText" name="encryptedText" style="resize:none; width:100%; height:230px;"></textarea>
